# Wheel-Deal-Shop

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: gh-actions-ci.yml  test.yml
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/common/: models.py
apps/coupons/: admin.py  models.py  views.py
apps/coupons/migrations/: 0001_initial.py
apps/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/orders/locale/en/LC_MESSAGES/: django.po
apps/orders/locale/es/LC_MESSAGES/: django.po
apps/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
apps/payments/: tasks.py  urls.py  views.py  webhooks.py
apps/shop/: models.py  recommender.py  tests.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_slug_and_more.py  0003_alter_product_slug.py  0004_translations.py  0005_alter_producttranslation_slug.py
apps/templates/admin/orders/order/: detail.html
apps/templates/cart/: detail.html
apps/templates/orders/order/: create.html  created.html  invoice_template.html
apps/templates/payment/: canceled.html  completed.html  process.html
apps/templates/shop/: base.html
apps/templates/shop/product/: detail.html  list.html
config/: celery.py  settings.py  test_settings.py  urls.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
tests/cart/: test_cart.py
tests/shop/: test_models.py  test_recommender.py
