[metadata]
name=Wheel Deal Shop
description=Online store selling car wheels/rims.
author=Thande Roy,
author_email=roy.thande@gmail.com

version=1.0.0
url=wheel-deal-shop.up.railway.app
license=Proprietary

[options]
packages =
    apps
install_requires = 
    Django~=4.2.1
    model_bakery~=1.14.0
    pytest~=7.4.0
    python-decouple~=3.8
    pytz~=2023.3
    setuptools~=67.7.2
    stripe~=5.5.0
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
apps = py.typed
