[metadata]
name=Wheel Deal Shop
description=Online store selling car wheels/rims.
author=Thande Roy,
author_email=roy.thande@gmail.com

version=1.0.0
url=wheel-deal-shop.up.railway.app
license=Proprietary

[options]
packages =
    apps
install_requires = 
    boto3~=1.26.157
    botocore~=1.29.157
    celery~=5.3.1
    Django~=4.2.1
    django-cors-headers~=4.1.0
    dj-database-url~=2.0.0
    django-parler~=2.3
    django-rosetta~=0.9.8
    django-storages~=1.13.2
    psycopg2~=2.9.6
    psycopg2-binary~=2.9.6
    model_bakery~=1.15.0
    pytest~=7.4.0
    python-decouple~=3.8
    setuptools~=67.7.2
    stripe~=5.5.0
    weasyprint~=56.1
    whitenoise~=6.5.0
    gunicorn~=20.1.0

python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing = 
    coverage~=7.3.0
    flake8~=6.1.0
    tox~=4.10.0
    pytest~=7.4.0
    pytest-cov~=4.1.0
    pytest-django~=4.5.2
    pytest-xdist~=3.3.1
    mypy~=1.3.0
